Fix scrollbars showing in label set list

--- a/src/assets/scss/choose_label_set_modal.scss
+++ b/src/assets/scss/choose_label_set_modal.scss
@@ -18,7 +18,7 @@
 
     .label-set-list {
       max-height: 400px;
-      overflow: scroll;
+      overflow-y: auto;
       display: flex;
       flex-direction: column;
       gap: 16px;
